# Sleep-Stage-Classifier

./: .gitignore  .pre-commit-config.yaml  Makefile  Product_Specifications_Document.md  README.md  mybib.bib  pyproject.toml  requirements.txt  specifications.ipynb
configs/: default.yaml
docs/: evaluation_spec.md
scripts/: download_script.ps1  fetch_sleep_edf.sh  make_fixture_subset.py  plot_hypnogram_comparison.py  read_edf.py  train_with_eta.py
specs/: artifacts_schema.yaml  dataset_fixtures.yaml  dataset_sleep_edfx_sc.yaml  dataset_sleep_edfx_st.yaml  evaluation.yaml  gates.yaml  hmm_transition_rules.yaml  model_limits.yaml  summary_schema.yaml
src/sleep_stager/: __init__.py
src/sleep_stager/cli/: main.py  train.py
src/sleep_stager/data/: edf.py  ingest.py  splits.py
src/sleep_stager/eval/: baseline.py  calibration.py  gates.py  metrics.py  (+3 more)
tests/: conftest.py
tests/cli/: test_dataset_invariants.py  test_train_kfold.py  test_train_loso.py  test_train_protocols.py
tests/data/: test_splits.py
tests/eval/: test_baseline.py  test_calibration.py  test_gates.py  test_metrics.py  test_provenance.py  test_report.py  test_schema.py  test_summary_schema.py  test_temporal.py
tests/features/: test_bandpower.py  test_bandpower_deterministic.py  test_bandpower_ratios.py  test_spectral_entropy.py  test_time_domain.py  test_transforms.py
tests/golden/: metrics_smoke.json
tests/integration/: test_cli_smoke.py
tests/models/: test_attention.py  test_context_window.py  test_inference.py  test_models.py  test_probabilities_simplex.py
tests/postprocess/: test_hmm.py
tests/utils/: test_system.py
(+15 files in other folders)
